fix overflow y

--- a/src/App/components/task-hub/index.css
+++ b/src/App/components/task-hub/index.css
@@ -2,5 +2,7 @@
     height: 100vh;
     width: 100%;
 
+    overflow-y: auto;
+
     border: 1px solid black;
 }
